radosgw-admin: bucket sync status not 'caught up' during full sync

the 'radosgw-admin bucket sync status' command will incorrectly report
that the "bucket is caught up with source" if some shards are still on
full sync

Fixes: http://tracker.ceph.com/issues/40806

Signed-off-by: Casey Bodley <cbodley@redhat.com>
(cherry picked from commit 9e05341a53d4cbb6f5d2018b8f29c1a32e0506a9)